# health_agent_infra

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  REPO_MAP.md  ROADMAP.md  STATUS.md  analysis_01_baseline.ipynb  eda_notebook.ipynb  pyproject.toml
.github/workflows/: flagship-proof.yml
archive/: README.md
artifacts/contracts/: retrieval_contract_v1.json
bot/: __init__.py  config.py  db.py  formatter.py  main.py  parser.py  service.py
clean/health_model/: __init__.py  agent_contract_cli.py  agent_interface.py  agent_memory_write_cli.py  agent_readable_daily_context.py  agent_recommendation_cli.py  agent_retrieval_cli.py  agent_submit_cli.py  daily_snapshot.py  daily_snapshot_merge_contract.py  schemas.py  semantic_summaries.py  shared_input_backbone.py  typed_manual_readiness_intake.py
docs/: health_lab_canonical_public_demo.md  retrieval_contract_v1.md
health_model/: __init__.py  agent_contract_cli.py  agent_interface.py  agent_retrieval_cli.py  build_daily_context_artifact.py  daily_snapshot.py  day_nutrition_brief.py  manual_logging.py  shared_input_backbone.py
merge_human_inputs/: README.md
merge_human_inputs/health_logger/: db.py  formatter.py  main.py  parser.py  service.py
merge_human_inputs/intake/: __init__.py  typed_manual_readiness_intake.py
pull/hevy/: __init__.py  auth.py  client.py  endpoints.py  extract_workouts.py  incremental.py  proof_bundle.py  raw_models.py  raw_receipts.py  source_ids.py  tombstones.py
reporting/: README.md
reporting/artifacts/: README.md
reporting/docs/: README.md  agent_cli_contract.md  agent_integration.md  architecture.md  current_system_state.md  daily_health_snapshot_merge_contract_v1.md  demo_flow.md  explainability.md  explicit_non_goals.md  tour.md  (+14 more)
tests/: test_agent_contract_cli.py  test_agent_interface.py  test_agent_retrieval_cli.py  test_day_nutrition_brief.py  test_manual_logging.py  test_persisted_bundle_append_regenerate.py
web/: app.py
(+438 files in other folders)
